2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs:
	* BlockLimits.cs:
	* DensitySupport.cs:
	* DiscImageChef.Decoders.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* PMA.cs:
	* TOC.cs:
	* PFI.cs:
	* DMI.cs:
	* ATIP.cs:
	* DDS.cs:
	* PRI.cs:
	* RMD.cs:
	* BCA.cs:
	* UDI.cs:
	* ADIP.cs:
	* AACS.cs:
	* DMI.cs:
	* Enums.cs:
	* CPRM.cs:
	* Spare.cs:
	* EVPD.cs:
	* Enums.cs:
	* ISO.cs:
	* Errors.cs:
	* Enums.cs:
	* Modes.cs:
	* Sense.cs:
	* Types.cs:
	* DI.cs:
	* Session.cs:
	* FullTOC.cs:
	* Layers.cs:
	* BCA.cs:
	* DDS.cs:
	* CSS&CPRM.cs:
	* Inquiry.cs:
	* Identify.cs:
	* Enums.cs:
	* Amiga.cs:
	* Apple2.cs:
	* CPRM.cs:
	* AACS.cs:
	* Spare.cs:
	* Cartridge.cs:
	* Enums.cs:
	* System34.cs:
	* Hybrid.cs:
	* AppleSony.cs:
	* Commodore.cs:
	* CDTextOnLeadIn.cs:
	* Cartridge.cs:
	* System3740.cs:
	* Features.cs:
	* VendorString.cs:
	* Perpendicular.cs:
	* BlockLimits.cs:
	* WriteProtect.cs:
	* DensitySupport.cs:
	* DiscInformation.cs:
	* DiscStructureCapabilities.cs: Refactor and code cleanup.

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	  Corrected handling when sense contains multiple repeated
	  sense codes, in a not clean way (just ignoring repeats).

2016-02-04  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	* SCSI/ModesEncoders.cs:
	* DiscImageChef.Decoders.csproj:
	  Added encoders for Mode 6 and 10, Mode pages 0x01 and 0x01
	  for MultiMedia Devices.

2016-02-03  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Inquiry.cs:
	  Corrected bug on inquiry decoding.

	* SCSI/Modes.cs:
	  Corrected bug on decoding mode page 2Ah without write
	  performance descriptors.
	Corrected bug when there is a vendor page 0 in mode sense
	  decoding.

2016-01-15  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implement decoding Fujitsu Verify Control Page.
